--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
+    "graphql": "^16.6.0",
+    "graphql-request": "^4.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
+    "sqlite3": "^5.0.11",
     "styled-components": "^5.3.5"
   },
   "scripts": {
